--- a/css/_atoms/_form-atoms.scss
+++ b/css/_atoms/_form-atoms.scss
@@ -242,7 +242,7 @@ label.radio {
 }
 
 input[type="radio"] {
-  display: flex;
+  display: inline-flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -250,9 +250,11 @@ input[type="radio"] {
   top: 0;
   left: 0.125rem;
   width: 1.25rem;
+  max-width: 1.25rem;
+  min-width: 1.25rem;
   height: 1.25rem;
   max-height: 1.25rem;
-  min-height: inherit;
+  min-height: 1.25rem;
   margin: 0;
   border: 1px solid $black;
   border-radius: 100%;
@@ -266,8 +268,8 @@ input[type="radio"]:checked:before {
   display: block;
   position: relative;
   margin: 0;
-  width: 60%;
-  height: 60%;
+  width: 50%;
+  height: 50%;
   border-radius: 100%;
   background-color: $secondary;
   content: "";
@@ -318,6 +320,7 @@ input.toggle[type="checkbox"]:after {
   left: 0;
   margin: 0;
   background-image: url(../assets/icons/close-circle-fill.svg);
+  background-position-x: left;
   background-repeat: no-repeat;
   background-size: contain;
   content: "";
@@ -325,8 +328,8 @@ input.toggle[type="checkbox"]:after {
 }
 
 input.toggle[type="checkbox"]:checked:after {
-  left: calc(100% - 1.125rem);
   background-image: url(../assets/icons/checkbox-circle-fill.svg);
+  background-position-x: right;
   background-repeat: no-repeat;
   background-size: contain;
   content: "";
