Blockquotes css adjustments

--- a/css/_atoms/_blockquotes.scss
+++ b/css/_atoms/_blockquotes.scss
@@ -3,8 +3,8 @@ blockquote {
   display: block;
   position: relative;
   width: 100%;
-  max-width: 41rem;
-  margin: 1rem auto 0;
+  max-width: 36rem;
+  margin: 2rem auto 1rem;
   padding: 1rem;
   border: 1px solid $lt-gray;
   p {
