--- a/css/_atoms/_blockquotes.scss
+++ b/css/_atoms/_blockquotes.scss
@@ -28,8 +28,8 @@ blockquote:before {
   line-height: 1.1;
   text-align: center;
   background-color: $white;
-  transform: translate(-50%, -60%);
   content: "\201C";
+  @include transform(translate(-50%, -60%));
 }
 
 @media (min-width: 64rem) {
