--- a/css/_atoms/_buttons.scss
+++ b/css/_atoms/_buttons.scss
@@ -6,14 +6,13 @@ button, .button {
   max-width: 100%;
   max-height: 2.5rem;
   overflow: hidden;
-  margin: 0;
+  margin: 1rem 0 0;
   padding: 0.75rem 1.25rem;
   border: 1px solid $primary;
   border-radius: 0.25rem;
   font-family: $font-body;
   font-size: 0.8rem;
   font-weight: 600;
-  letter-spacing: 1px;
   text-align: center;
   text-decoration: none;
   text-overflow: ellipsis;
