--- a/css/_molecules/_navigation.scss
+++ b/css/_molecules/_navigation.scss
@@ -27,7 +27,7 @@ nav {
     height: 0;
     padding: 0;
     list-style-type: none;
-    transform: translateX(-100rem);
+    @include transform (translateX(-100rem));
     @include transition (all, 0.325s, ease);
     li {
       padding: 1rem 0;
@@ -45,7 +45,7 @@ nav.open {
   ul {
     height: 100vh;
     padding: 1rem 0 0;
-    transform: translateX(0);
+    @include transform (translateX(0));
   }
 }
 
@@ -57,7 +57,7 @@ nav.open {
       flex-direction: row;
       height: auto;
       padding: 0;
-      transform: translateX(0);
+      @include transform (translateX(0));
       li {
         width: auto;
         padding: 0 2rem 0 0;
