--- a/css/_global/_colors.scss
+++ b/css/_global/_colors.scss
@@ -1,8 +1,9 @@
 // GLOBAL COLORS
 $black: #000000;
 $white: #ffffff;
-$dk-gray: #5b5e6b;
-$lt-gray: #e4e8ed;
+$dk-gray: #919191;
+$md-gray: #cccccc;
+$lt-gray: #eeeeee;
 
 
 // SYSTEM COLORS
@@ -11,10 +12,82 @@ $valid: #008000;
 
 
 // BRAND COLORS
-$dark-blue: #003442;
-$pale-blue: #4f7272;
+$dk-blue: #003442;
+$lt-blue: #4f7272;
 $crimson: #df3a32;
-$cream: #e9eae9;
 
 $primary: #df3a32;
 $secondary: #003442;
+
+
+// BACKGROUND-COLOR APPLICATION
+.bg-black {background-color: $black;}
+.bg-white {background-color: $white;}
+.bg-dk-gray {background-color: $dk-gray;}
+.bg-md-gray {background-color: $md-gray;}
+.bg-lt-gray {background-color: $lt-gray;}
+.bg-dk-blue {background-color: $dk-blue;}
+.bg-lt-blue {background-color: $lt-blue;}
+.bg-crimson {background-color: $crimson;}
+
+
+// COLOR CARDS
+.color-card-row {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  .color-card {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    margin: 1rem 0;
+    padding: 1rem;
+    border: 1px solid $lt-gray;
+    border-radius: 0.25rem;
+    .color-sample {
+      display: block;
+      width: 4rem;
+      height: 4rem;
+      padding: 0;
+      border-radius: 100%;
+    }
+    .color-values {
+      padding: 0.6rem 0 0;
+    }
+  }
+}
+
+@media (min-width: 48rem) {
+  .color-card-row {
+    flex-direction: row;
+    align-items: stretch;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    .color-card {
+      width: calc(34% - 2rem);
+      margin: 1rem 2rem 1rem 0;
+    }
+    .color-card:nth-of-type(3n) {margin: 1rem 0;}
+  }
+}
+
+@media (min-width: 64rem) {
+  .color-card-row {
+    .color-card {width: calc(25.5% - 2rem);}
+    .color-card:nth-of-type(3n) {margin: 1rem 2rem 1rem 0;}
+    .color-card:nth-of-type(4n) {margin: 1rem 0;}
+  }
+}
+
+@media (min-width: 90rem) {
+  .color-card-row {
+    .color-card {width: calc(20.25% - 2rem);}
+    .color-card:nth-of-type(3n) {margin: 1rem 2rem 1rem 0;}
+    .color-card:nth-of-type(4n) {margin: 1rem 2rem 1rem 0;}
+    .color-card:nth-of-type(5n) {margin: 1rem 0;}
+  }
+}
