--- a/css/_global/_typography.scss
+++ b/css/_global/_typography.scss
@@ -20,31 +20,44 @@ h1, h2, h3, h4 {
   line-height: 1.1;
 }
 
-h1:first-child,
-h2:first-child,
-h3:first-child,
-h4:first-child {padding: 0;}
-
 h1 {font-size: 3.157rem;}
 h2 {font-size: 2.369rem;}
 h3 {font-size: 1.777rem;}
 h4 {font-size: 1.333rem;}
 
+h2 + h3,
+h2 + p,
+h3 + p,
+h4 + p {padding: 0.25rem 0 0;}
+
+p + h1, p + h2, p + h3, p + h4,
+ul + h1, ul + h2, ul + h3, ul + h4,
+ol + h1, ol + h2, ol + h3, ol + h4 {padding: 2rem 0 0;}
+
 p {
   width: 100%;
   max-width: 39rem;
-  padding: 0.8rem 0;
+  padding: 1rem 0 0;
   font-size: 1rem;
   line-height: 1.75;
 }
 
-p:last-child {padding: 0.8rem 0 0;}
+p > cite {
+  display: block;
+  font-size: 0.8rem;
+  font-style: normal;
+}
 
-p > cite {font-style: normal;}
+p > cite a {
+  display: inline;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
 
 strong, em, b {
   font-style: normal;
-  font-weight: 600;
+  font-weight: $font-body-bold;
 }
 
 small {font-size: 0.8rem;}
@@ -62,7 +75,6 @@ h1.right, h2.right, h3.right, p.right, strong.right, em.right, small.right {text
     max-width: 48rem;
     font-size: 1.5rem;
   }
-  p > cite {font-size: 0.8rem;}
 }
 
 
@@ -72,7 +84,7 @@ ul, ol {
   flex-direction: column;
   width: 100%;
   margin: 0 auto;
-  padding: 0.8rem 0 0.8rem 1.5rem;
+  padding: 1rem 0 0 1.5rem;
   font-size: 1rem;
   line-height: 1.5;
   text-align: left;
@@ -81,7 +93,7 @@ ul, ol {
 ul {list-style-type: disc;}
 
 ul.no-bullets {
-  padding: 0.8rem 0 0.8rem 0;
+  padding: 0.8rem 0 0 0;
   list-style-type: none;
 }
 
@@ -97,13 +109,28 @@ ul li:last-child, ol li:last-child {padding: 0 0 0 0.25rem;}
 
 
 // TEXT LINKS
-p a, small a, li a {font-weight: 600;}
+a {
+  color: $primary;
+  cursor: pointer;
+  @include transition(all, 0.25s, ease);
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+a:hover, a:focus {color: $secondary;}
+
+p a, small a, li a {font-weight: $font-body-bold;}
 
 
 // FIGURE TYPOGRAPHY
 figcaption {
   font-size: 0.64rem;
-  font-weight: 600;
+  font-weight: $font-body-bold;
   text-transform: uppercase;
 }
 
@@ -112,12 +139,15 @@ figcaption + h2,
 figcaption + h3,
 figcaption + h1 {padding: 0.25rem 0 0;}
 
-pre {line-height: 1.2;}
+pre {
+  margin: 0.4rem 0 0;
+  line-height: 1.2;
+}
 
 p > code, li > code {
   font-size: 1rem;
   white-space: nowrap;
-  background-color: $cream;
+  background-color: $lt-gray;
 }
 
 p > code.other {padding: 0.125rem 0.25rem;}
