--- a/css/master.css
+++ b/css/master.css
@@ -119,7 +119,11 @@ main {
   width: 100%;
   overflow-x: hidden;
   margin: 0 auto;
-  padding: 0; }
+  padding: 5rem 0 0; }
+
+@media (min-width: 48rem) {
+  main {
+    padding: 4rem 0 0; } }
 
 .row {
   display: flex;
@@ -418,9 +422,236 @@ pre {
   line-height: 1.2; }
 
 p > code, li > code {
-  font-size: 1rem;
+  font-family: consolas,"Liberation Mono",courier,monospace;
+  font-size: 0.975rem;
   white-space: nowrap;
   background-color: #eeeeee; }
 
-p > code.other {
-  padding: 0.125rem 0.25rem; }
+nav {
+  width: 100%;
+  padding: 1rem; }
+  nav button.menu-toggle {
+    display: flex;
+    margin: 0 0 0 auto;
+    padding: 0;
+    border: none;
+    background-color: transparent; }
+    nav button.menu-toggle svg {
+      width: 2rem;
+      height: 2rem;
+      fill: #df3a32; }
+    nav button.menu-toggle svg.menu-toggle-open {
+      -webkit-transition: width 0.25s ease 0s;
+      -moz-transition: width 0.25s ease 0s;
+      -ms-transition: width 0.25s ease 0s;
+      -o-transition: width 0.25s ease 0s;
+      transition: width 0.25s ease 0s; }
+    nav button.menu-toggle svg.menu-toggle-close {
+      width: 0;
+      -webkit-transition: width 0.25s ease 0s;
+      -moz-transition: width 0.25s ease 0s;
+      -ms-transition: width 0.25s ease 0s;
+      -o-transition: width 0.25s ease 0s;
+      transition: width 0.25s ease 0s; }
+  nav ul {
+    display: flex;
+    flex-direction: column;
+    height: 0;
+    padding: 0;
+    list-style-type: none;
+    -webkit-transform: translateX(-100rem);
+    -moz-transform: translateX(-100rem);
+    -ms-transform: translateX(-100rem);
+    -o-transform: translateX(-100rem);
+    transform: translateX(-100rem);
+    -webkit-transition: all 0.325s ease 0s;
+    -moz-transition: all 0.325s ease 0s;
+    -ms-transition: all 0.325s ease 0s;
+    -o-transition: all 0.325s ease 0s;
+    transition: all 0.325s ease 0s; }
+    nav ul li {
+      padding: 1rem 0;
+      font-weight: 600; }
+    nav ul li a {
+      text-decoration: none; }
+  nav ul li:last-child {
+    padding: 1rem 0; }
+
+nav.open button.menu-toggle svg.menu-toggle-open {
+  width: 0; }
+
+nav.open button.menu-toggle svg.menu-toggle-close {
+  width: 2rem; }
+
+nav.open ul {
+  height: 100vh;
+  padding: 1rem 0 0;
+  -webkit-transform: translateX(0);
+  -moz-transform: translateX(0);
+  -ms-transform: translateX(0);
+  -o-transform: translateX(0);
+  transform: translateX(0); }
+
+@media (min-width: 48rem) {
+  nav {
+    padding: 1rem; }
+    nav button.menu-toggle {
+      display: none; }
+    nav ul {
+      flex-direction: row;
+      height: auto;
+      padding: 0;
+      -webkit-transform: translateX(0);
+      -moz-transform: translateX(0);
+      -ms-transform: translateX(0);
+      -o-transform: translateX(0);
+      transform: translateX(0); }
+      nav ul li {
+        width: auto;
+        padding: 0 2rem 0 0; }
+    nav ul li:last-child {
+      padding: 0; } }
+
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  position: fixed;
+  z-index: 100;
+  width: 100%;
+  margin: 0;
+  padding: 1rem;
+  background-color: #ffffff; }
+  header h1 {
+    display: none; }
+  header .logo {
+    display: none; }
+
+.header--fixed {
+  position: fixed;
+  z-index: 10;
+  right: 0;
+  left: 0;
+  top: 0; }
+
+.headroom {
+  -webkit-transition: all 0.25s ease 0s;
+  -moz-transition: all 0.25s ease 0s;
+  -ms-transition: all 0.25s ease 0s;
+  -o-transition: all 0.25s ease 0s;
+  transition: all 0.25s ease 0s;
+  will-change: transform; }
+
+.headroom--pinned {
+  -webkit-transform: translateY(0);
+  -moz-transform: translateY(0);
+  -ms-transform: translateY(0);
+  -o-transform: translateY(0);
+  transform: translateY(0); }
+
+.headroom--unpinned {
+  -webkit-transform: translateY(-100%);
+  -moz-transform: translateY(-100%);
+  -ms-transform: translateY(-100%);
+  -o-transform: translateY(-100%);
+  transform: translateY(-100%); }
+
+@media (min-width: 48rem) {
+  header {
+    flex-direction: row;
+    align-items: center; }
+    header .logo {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      width: 4rem;
+      margin: 0 0 0 1rem; }
+      header .logo a {
+        line-height: 0.7; } }
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
+  margin: 0;
+  padding: 0 1rem 1rem; }
+  footer h1 {
+    display: none; }
+  footer nav ul {
+    flex-direction: column;
+    height: auto;
+    padding: 0;
+    transform: translateX(0); }
+    footer nav ul li {
+      padding: 0 0 1rem;
+      text-align: center; }
+    footer nav ul li:last-child {
+      padding: 0; }
+  footer .row nav.column ul:last-child {
+    padding: 0; }
+  footer .logo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    padding: 2rem 0 0.5rem; }
+    footer .logo svg {
+      width: 6rem; }
+    footer .logo h1 {
+      display: block;
+      font-size: 1.5rem; }
+  footer .github {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    text-align: center; }
+    footer .github a {
+      line-height: 1; }
+    footer .github a svg {
+      fill: #df3a32;
+      -webkit-transition: all 0.25s ease 0s;
+      -moz-transition: all 0.25s ease 0s;
+      -ms-transition: all 0.25s ease 0s;
+      -o-transition: all 0.25s ease 0s;
+      transition: all 0.25s ease 0s; }
+    footer .github a:hover svg,
+    footer .github a:focus svg {
+      fill: #003442; }
+    footer .github svg {
+      width: 2rem;
+      height: 2rem; }
+  footer .copyright.row {
+    padding: 0 1rem 1rem; }
+    footer .copyright.row p {
+      max-width: none;
+      margin: 0 auto;
+      padding: 0;
+      font-size: 0.64rem;
+      text-align: center; }
+
+footer:before {
+  display: block;
+  width: calc(100% - 2rem);
+  height: 1px;
+  margin: 1rem auto;
+  background-color: #cccccc;
+  content: ""; }
+
+@media (min-width: 48rem) {
+  footer {
+    padding: 0 0 2rem; }
+    footer nav ul li {
+      font-size: 0.8rem;
+      text-align: left; }
+    footer .row {
+      align-items: center; }
+    footer .logo {
+      padding: 0 0 0.5rem; }
+    footer .copyright.row {
+      padding: 1rem 2rem 0; }
+      footer .copyright.row p {
+        text-align: left; }
+  footer:before {
+    width: calc(100% - 4rem); } }
