--- a/css/master.scss
+++ b/css/master.scss
@@ -1,3 +1,8 @@
 @import "_global/base";
 @import "_global/layout";
 @import "_global/typography";
+
+@import "_molecules/navigation";
+
+@import "_organisms/headers";
+@import "_organisms/footers";
